templates/infra/aws-eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __SERVICE__
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: __SERVICE__
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
